<resources>
    <string name="app_name">TasK</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_back">Log back into your account</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="order_details">Order Details</string>
    <string name="customer_details">Customer Details</string>
    <string name="customer_name">Customer Name:</string>
    <string name="order_no">Order Number:</string>
    <string name="order_date">Order Date:</string>
    <string name="pay_option">Payment Option:</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="taxes">Taxes</string>
    <string name="items">Item(s)</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="delivery">Delivery</string>
    <string name="discount">Discount</string>
    <string name="location_details">Location Details</string>
    <string name="address">Address:</string>
    <string name="mobile">Mobile:</string>
    <string name="reason">Reason</string>
    <string name="order_status">Order Status</string>
    <string name="return_reason">Reason For Return</string>
    <string name="type_return_reason">Please type your reason for return :</string>
    <string name="save_changes">Save Changes</string>

    <string name="new_">New</string>
    <string name="others">Others</string>
    <string name="filter">Filter</string>
    <string name="no_orders">No orders yet</string>
    <string name="no_orders_text">You don`t have any orders in your history</string>


    <string name="no_connection">  No Internet Connection</string>
    <string name="no_connection_text">There was an issue connecting to the server, Check your internet connection and retry.</string>
    <string name="retry"> Retry</string>
    <string name="close"> Close</string>

    <string name="status"> Status</string>
    <string name="total_price"> Total Price</string>
    <string name="date"> Date</string>
    <string name="loading"> Loading ..</string>
    <string name="please_waite"> Pleas waite</string>

    <integer name="mirror">0</integer>

</resources>
