<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="center"
    android:gravity="center"

    android:padding="@dimen/_5sdp">



    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:src="@drawable/ic_no_wifi_fill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/img"
        app:layout_constraintTop_toTopOf="@id/img"
        app:layout_constraintStart_toEndOf="@id/img"
        android:text="@string/no_connection"
        android:layout_marginStart="@dimen/_5sdp"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:textColor="@color/black"/>


    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_connection_text"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:textSize="@dimen/_12sdp"/>


    <Button
        android:id="@+id/retry_connect"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/retry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:backgroundTint="@color/colorPrimary2"
        android:paddingEnd="@dimen/_25sdp"
        android:paddingStart="@dimen/_25sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        />

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt"
        android:text="@string/close"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginBottom="@dimen/_10sdp"
        android:paddingEnd="@dimen/_25sdp"
        android:paddingStart="@dimen/_25sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>