<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layoutDirection="ltr"
        android:src="@drawable/ic_circle"/>

    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_language_white"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:tint="@color/white"
        android:layoutDirection="ltr"
        android:padding="@dimen/_3sdp"
        />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_80sdp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/logo"
        android:layoutDirection="ltr"

        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        >
        
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_25sdp"
            android:text="@string/welcome_back"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/colorPrimary2"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_10sdp"
            android:text="@string/log_back"
            android:textColor="@color/colorPrimary2"
            />





        <EditText
            android:id="@+id/et_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_circle"
            android:layout_marginTop="@dimen/_15sdp"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:backgroundTint="@color/aqua"
            android:hint="@string/user_id"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            android:maxLines="1"
            android:inputType="number"

            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_circle"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:backgroundTint="@color/aqua"
            android:hint="@string/password"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            android:maxLines="1"
            android:inputType="textPassword"
            />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@drawable/bg_circle"
            android:textColor="@color/white"
            android:text="@string/login"
            android:foreground="@drawable/btn_details_ripple"
            android:textAllCaps="false"
            android:textSize="@dimen/_14sdp"
            app:backgroundTint="@color/colorPrimary2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delivery_vehicle"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_20sdp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>