<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AllOrdersActivity">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bg_top_bar">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_circle_1"
                    android:layout_alignParentEnd="true"
                    app:layout_constraintTop_toTopOf="parent"
                    android:rotation="@integer/mirror"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_22sdp"
                    android:text=""
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/_15sdp"
                    android:layout_centerVertical="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <ImageView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_95sdp"
                    android:src="@drawable/driver_man"
                    android:layout_alignParentEnd="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/_2sdp" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bar"
            android:layout_marginTop="@dimen/_10sdp"
            app:singleSelection="true"
            android:background="@drawable/bg_btn_toggle_off"


            app:tabTextAppearance="@style/tab_text"
            app:tabBackground="@drawable/selector_toggle"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/colorPrimary2"
            app:tabIndicatorFullWidth="false"
            app:tabRippleColor="@android:color/transparent"
            app:tabMode="scrollable"
            app:tabPaddingTop="@dimen/_5sdp"
            app:tabPaddingBottom="@dimen/_5sdp"


            app:tabGravity="fill"
            app:tabIndicatorAnimationDuration="@android:integer/config_shortAnimTime"
            app:tabIndicator="@drawable/selector_toggle"
            android:elevation="@dimen/_5sdp"


            >

            <com.google.android.material.tabs.TabItem
                android:id="@+id/btn_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/new_"


                android:textAllCaps="false"
                android:outlineProvider="bounds"

                />


            <com.google.android.material.tabs.TabItem
                android:id="@+id/btn_others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/others"

                android:textAllCaps="false"
                android:outlineProvider="bounds"


                />


        </com.google.android.material.tabs.TabLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_filter"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch1"
            android:elevation="1dp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:cardPreventCornerOverlap="true"
            app:cardMaxElevation="0dp"
            android:foreground="@drawable/ripple_circle"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:clickable="true"
            app:cardBackgroundColor="@color/colorPrimary2">

            <TextView
                android:id="@+id/filters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/filter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch1"
                android:layout_marginStart="@dimen/_1sdp"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="end|center"
                android:textColor="@color/white"
                android:gravity="center"
                android:textAllCaps="false"
                android:clickable="false"
                android:drawableStart="@drawable/ic_filter"
                style="@style/Base.Widget.AppCompat.Button.Borderless"

                />

            <!--        <ImageView-->
            <!--            android:layout_width="@dimen/_15sdp"-->
            <!--            android:layout_height="@dimen/_15sdp"-->
            <!--            android:src="@drawable/ic_filter"-->
            <!--            android:layout_gravity="start|center"-->
            <!--            android:layout_marginStart="@dimen/_5sdp"-->
            <!--            />-->

        </androidx.cardview.widget.CardView>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_5sdp"

            app:layout_constraintTop_toBottomOf="@id/card_filter"

            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orders_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toBottomOf="@id/card_filter"
                android:clipToPadding="false"

                android:paddingBottom="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_5sdp" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <!--    <androidx.recyclerview.widget.RecyclerView-->
        <!--        android:id="@+id/orders_recyclerview"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->

        <!--        app:layout_constraintTop_toBottomOf="@id/card_filter"-->
        <!--        android:clipToPadding="false"-->

        <!--        android:paddingBottom="@dimen/_100sdp"-->
        <!--        android:layout_marginTop="@dimen/_5sdp"/>-->


        <RelativeLayout
            android:id="@+id/layout_no_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/img_no_orders"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_180sdp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_emptyorder" />

            <TextView
                android:id="@+id/txt_no_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_no_orders"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_18sdp"
                android:text="@string/no_orders"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_no_orders"
                android:layout_marginTop="@dimen/_11sdp"
                android:text="@string/no_orders_text"
                android:textSize="@dimen/_14sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black" />

        </RelativeLayout>


        <ProgressBar
            android:id="@+id/progress_orders"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>