<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_75sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_2sdp"
    app:cardPreventCornerOverlap="true"
    app:cardBackgroundColor="@color/white"
    android:foreground="@drawable/btn_details_ripple"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/order_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:text="#54"
            android:textSize="@dimen/_9sdp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/go_details"
            app:layout_constraintTop_toBottomOf="@id/order_num"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:layout_gravity="center_vertical"
                >

                <TextView
                    android:id="@+id/status_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/status"
                    android:textSize="@dimen/_7sdp"/>

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/status_label"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="Delivering"
                    android:textSize="@dimen/_11sdp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="0.8dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_5sdp"

               android:layout_gravity="center_vertical"
                android:background="@color/colorPrimaryDark"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"                android:layout_gravity="center_vertical"
                >

                <TextView
                    android:id="@+id/price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/total_price"
                    android:textSize="@dimen/_7sdp"/>

                <TextView
                    android:id="@+id/tv_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/price_label"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/colorPrimary2"
                    android:text="1500 LE"
                    android:textSize="@dimen/_11sdp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="0.8dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorPrimaryDark"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"                android:layout_gravity="center_vertical"
                >

                <TextView
                    android:id="@+id/price_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/date"
                    android:textSize="@dimen/_7sdp"/>

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/price_date"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/colorPrimary2"
                    android:text="11/6/2022"
                    android:textSize="@dimen/_11sdp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>



        <RelativeLayout
            android:id="@+id/go_details"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/red10"

            >


            <TextView
                android:id="@+id/txt_go"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:gravity="center_vertical"
                android:text="@string/order_details"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_7sdp"
                tools:ignore="RtlCompat" />

            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/ic_arrow_right_black"
                android:layout_below="@id/txt_go"
                android:tint="@color/white"
                android:rotation="@integer/mirror"
                android:layout_centerHorizontal="true"/>


        </RelativeLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>